name:                my-site
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/KZhide/my-site#readme
license:             BSD3
license-file:        LICENSE
author:              K_Zhide
maintainer:          K.WildBoar@gmail.com
copyright:           2018 K_Zhide
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable my-site
  main-is:             site.hs
  default-language:    Haskell2010
  ghc-options:         -threaded
  build-depends:       base >= 4.7 && < 5,
                       hakyll
